--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
     }
 header {
     width: 100%;
-    height: 300px; /* Ajusta la altura según lo necesites */
+    height: 170px; /* Ajusta la altura según lo necesites */
 }
 
 .imagen-encabezado {
@@ -29,4 +29,8 @@ h2{color: rgb(0, 0, 0);
     font-weight: bold;
     font-size: 150%;
     text-align: left;}
+
+body {
+    font-family: "Poltawski Nowy", serif;
+}
 
