--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
 @import url('http://meyerweb.com/eric/tools/css/reset/reset.css'); /* CSS Reset para compatibilidad entre navegadores */
-@import url('main.css'); /* Estilos principales */
+@import url(main.css); /* Estilos principales */
 @import url(typography.css);
+@import url(theme.css);
