--- a/miportfolio/css/styles.css
+++ b/miportfolio/css/styles.css
@@ -19,64 +19,76 @@ header {
 nav ul {
   list-style: none;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   gap: 20px;
+}
+
+nav ul li {
+  display: inline;
+}
+
+nav ul li a:hover{
+  text-decoration: underline;
 }
 
 nav a {
   text-decoration: none;
   color: #d10050;
   font-weight: 600;
+  font-size: 20px
 }
 
 .intro-section {
   text-align: center;
-  padding: 50px 20px;
+  padding: 20px 20px;
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 180px;
+  margin-top: 100px;
   font-weight: 700;
   color: #d10050;
 }
 
 .cursive {
   font-family: 'Great Vibes', cursive;
-  font-size: 1.2em;
+  font-size: 150px;
 }
 
 h2 {
-  font-size: 1.8em;
-  margin-top: 10px;
+  font-size: 100px;
+  margin-top: 2px;
   color: #d10050;
   font-weight: 600;
 }
 
 .swipe {
-  margin-top: 30px;
-  font-size: 1em;
+  margin-top: 100px;
+  font-size: 20px;
   color: #d10050;
 }
 
 .about {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: flex-start;
-  margin-top: 60px;
+  margin-top: 150px;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 200px;
 }
 
 .about-title {
   font-family: 'Great Vibes', cursive;
   color: #d10050;
-  font-size: 2em;
-  margin-bottom: 15px;
+  font-size: 50px;
+  margin-bottom: 50px;
 }
 
 .about-text {
-  max-width: 600px;
+  max-width: 850px;
   text-align: left;
+  color: #d10050;
+  font-size: 20px;
 }
 
 .about-text p {
@@ -92,7 +104,7 @@ h2 {
 
 .btn {
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 60px;
   padding: 10px 20px;
   background-color: #d10050;
   color: white;
@@ -102,17 +114,22 @@ h2 {
 }
 
 .works-section {
-  padding: 60px 20px;
-  background-color: #fff;
-  text-align: center;
+  display: flex;
+  justify-content: left;
+  align-items: flex-start;
+  margin-top: 150px;
+  flex-wrap: wrap;
+  gap: 200px;
 }
 
 .works-title {
   font-family: 'Great Vibes', cursive;
   color: #d10050;
-  font-size: 2em;
-  margin-bottom: 40px;
+  font-size: 50px;
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
+
 
 .works-grid {
   display: grid;
@@ -124,7 +141,7 @@ h2 {
 
 .work-card {
   background-color: #fff5f5;
-  border-radius: 10px;
+  border-radius: 20px;
   padding: 15px;
   text-align: left;
   box-shadow: 0 0 5px rgba(0,0,0,0.05);
@@ -157,7 +174,7 @@ footer {
   background-color: #d10050;
   color: white;
   padding: 30px 20px;
-  margin-top: 60px;
+  margin-top: 100px;
 }
 
 .footer-content {
@@ -183,11 +200,3 @@ footer p {
   margin: 5px 0;
 }
 
-.btn {
-  background-color: #d10050;
-  color: white;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
-}
