--- a/miportfolio/css/styles.css
+++ b/miportfolio/css/styles.css
@@ -8,7 +8,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-color: #fff8f8;
   color: #444;
-  padding: 20px;
+  margin: 0;
+  padding: 20px 20px; 
 }
 
 header {
@@ -21,6 +22,7 @@ nav ul {
   display: flex;
   justify-content: flex-start;
   gap: 20px;
+  margin-top: 20px;
 }
 
 nav ul li {
@@ -33,7 +35,7 @@ nav ul li a:hover{
 
 nav a {
   text-decoration: none;
-  color: #d10050;
+  color: #f01b3e;
   font-weight: 600;
   font-size: 20px
 }
@@ -47,7 +49,7 @@ h1 {
   font-size: 180px;
   margin-top: 100px;
   font-weight: 700;
-  color: #d10050;
+  color: #f01b3e;
 }
 
 .cursive {
@@ -58,14 +60,14 @@ h1 {
 h2 {
   font-size: 100px;
   margin-top: 2px;
-  color: #d10050;
+  color:#f01b3e;
   font-weight: 600;
 }
 
 .swipe {
   margin-top: 100px;
   font-size: 20px;
-  color: #d10050;
+  color: #f01b3e;
 }
 
 .about {
@@ -74,30 +76,33 @@ h2 {
   align-items: flex-start;
   margin-top: 150px;
   flex-wrap: wrap;
-  gap: 200px;
+  gap: 50px;
 }
 
 .about-title {
   font-family: 'Great Vibes', cursive;
-  color: #d10050;
+  color: #f01b3e;
   font-size: 50px;
   margin-bottom: 50px;
+  margin-top: 100px;
 }
 
 .about-text {
   max-width: 850px;
   text-align: left;
-  color: #d10050;
-  font-size: 20px;
+  color: #f01b3e;
+  font-size: 15px;
 }
 
 .about-text p {
   margin-bottom: 15px;
+  margin-right: 50px;
   line-height: 1.6;
 }
 
 .about-image img {
-  width: 250px;
+  width: 300px;
+  height: auto;
   border-radius: 10px;
   object-fit: cover;
 }
@@ -106,25 +111,72 @@ h2 {
   display: inline-block;
   margin-top: 60px;
   padding: 10px 20px;
-  background-color: #d10050;
+  background-color: #f01b3e;
   color: white;
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
 }
 
+.skills-section {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: 0 auto;
+}
+
+.skill {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  max-width: 400px;
+}
+
+.skill-name {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+  color: #333;
+  font-size: 20px;
+}
+
+.skill-name img {
+  width: 40px;
+  height: 40px;
+}
+
+.skill-dots {
+  display: flex;
+  gap: 5px;
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.dot.filled {
+  background-color: #d10050;
+}
+
+.dot.empty {
+  background-color: #ccc;
+}
+
 .works-section {
   display: flex;
   justify-content: left;
   align-items: flex-start;
-  margin-top: 150px;
+  margin-top: 50px;
   flex-wrap: wrap;
-  gap: 200px;
 }
 
 .works-title {
   font-family: 'Great Vibes', cursive;
-  color: #d10050;
+  color: #f01b3e;
   font-size: 50px;
   margin-top: 100px;
   margin-bottom: 50px;
@@ -133,14 +185,14 @@ h2 {
 
 .works-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  max-width: 1200px;
+  max-width: 1800px;
   margin: 0 auto;
 }
 
 .work-card {
-  background-color: #fff5f5;
+  background-color: #f8e8e8;
   border-radius: 20px;
   padding: 15px;
   text-align: left;
@@ -156,13 +208,13 @@ h2 {
 
 .work-card .category {
   color: #777;
-  font-size: 0.85em;
+  font-size: 12px;
   margin-bottom: 5px;
 }
 
 .work-card h4 {
-  color: #d10050;
-  font-size: 1em;
+  color: #f01b3e;
+  font-size: 15px;
   font-weight: 600;
 }
 
@@ -171,20 +223,18 @@ h2 {
 }
 
 footer {
-  background-color: #d10050;
+  background-color: #f01b3e;
   color: white;
   padding: 30px 20px;
-  margin-top: 100px;
+  width: 100%;
+  margin: 0; 
+  margin-top: 150px;
 }
 
 .footer-content {
-  max-width: 1200px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.footer-contact p {
-  margin-bottom: 8px;
+  max-width: 2000px;
+  margin: auto;
+  text-align: right;
 }
 
 .footer-contact a {
