--- a/miportfolio/css/styles.css
+++ b/miportfolio/css/styles.css
@@ -17,6 +17,12 @@ header {
   padding: 20px;
 }
 
+main {
+  padding: 0 20px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 nav ul {
   list-style: none;
   display: flex;
@@ -65,17 +71,21 @@ h2 {
 
 .swipe {
   margin-top: 100px;
+  margin-bottom: 150px;
   font-size: 20px;
   color: #f01b3e;
+  align-items: center;
 }
 
 .about {
   display: flex;
-  justify-content: left;
+  justify-content: space-between;
   align-items: flex-start;
   margin-top: 50px;
   flex-wrap: wrap;
   gap: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .about-title {
@@ -87,21 +97,26 @@ h2 {
 }
 
 .about-text {
-  max-width: 850px;
-  text-align: left;
+  flex: 1 1 60%;
   color: #f01b3e;
   font-size: 20px;
+  text-align: justify;
 }
 
 .about-text p {
   margin-bottom: 15px;
-  margin-right: 50px;
+  margin-right: 40px;
   line-height: 1.6;
 }
 
+.about-image {
+  flex: 1 1 35%;
+  margin-top: 230px;
+}
+
 .about-image img {
-  width: 300px;
-  height: auto;
+  width: 100%;
+  max-width: 400px;
   border-radius: 10px;
   object-fit: cover;
 }
@@ -109,6 +124,7 @@ h2 {
 .btn {
   display: inline-block;
   margin-top: 60px;
+  margin-bottom: 120px;
   padding: 10px 20px;
   background-color: #f01b3e;
   color: white;
@@ -125,10 +141,6 @@ h2 {
   margin-top:5px;
 }
 
-.skills-section {
-      max-width: 900px;
-      margin: 0 auto;
-}
 
 .skill {
   display: flex;
@@ -143,7 +155,7 @@ h2 {
   align-items: center;
   gap: 10px;
   font-weight: bold;
-  color: #333;
+  color: #f01b3e;
   font-size: 25px;
 }
 
@@ -228,6 +240,43 @@ h2 {
 .center-btn {
   margin-top: 40px;
 }
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.language-list {
+  list-style: none;
+  padding: 0;
+  margin-top: 10px;
+}
+
+.language-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #f8c8c8;
+}
+
+.language-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.language-info img {
+  width: 24px;
+  height: 24px;
+}
+
+.language-level {
+  font-style: italic;
+  color: #f01b3e;
+}
+
 
 footer {
   background-color: #f01b3e;
