--- a/miportfolio/css/styles.css
+++ b/miportfolio/css/styles.css
@@ -126,13 +126,14 @@ h2 {
 .btn {
   display: inline-block;
   margin-top: 60px;
-  margin-bottom: 120px;
+  margin-bottom: 60px;
   padding: 10px 20px;
   background-color: #f01b3e;
   color: white;
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
+  font-size: 18px; 
 }
 
 .section-title {
@@ -324,35 +325,40 @@ a, .btn {
   text-align: center;
 }
 
- .carousel {
-      position: relative;
-      width: 1000%;
-      max-width: 800px;
-      margin: auto;
-      overflow: hidden;
-    }
+.carousel {
+  position: relative;
+  width: 1000%;
+  max-width: 800px;
+  margin: auto;
+  overflow: hidden;
+}
 
-    .slides {
-      display: flex;
-      width: max-content;
-      animation: scroll 20s linear infinite;
-    }
+.slides {
+  display: flex;
+  width: max-content;
+  animation: scroll 20s linear infinite;
+}
 
-    .slide {
-      flex-shrink: 0;
-      width: 100%;
-      max-width: 500px;
-    }
+.slide {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 400px; /* Asegúrate de que las diapositivas tengan el mismo tamaño */
+  height: 400px; /* Ajusta la altura según sea necesario */
+  overflow: hidden; /* Evita que las imágenes se desborden */
+}
 
-    .slide img {
-      width: 100%;
-      display: block;
-    }
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
 
-    @keyframes scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); } /* Se mueve a la mitad, porque duplicamos imágenes */
-    }
+@keyframes scroll {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+
 
 a {
   color: #f01b3e;
