--- a/miportfolio/css/styles.css
+++ b/miportfolio/css/styles.css
@@ -93,8 +93,9 @@ h2 {
 .about-title {
   font-family: 'Arizonia', cursive;
   color: #f01b3e;
-  font-size: clamp(2rem, 6vw, 6rem); /* Usando clamp */
+  font-size: clamp(2rem, 4vw, 6rem); /* Usando clamp */
   margin-bottom: 5vw;
+  margin-top: 5vw;
   text-align: left;
 }
 
@@ -242,7 +243,7 @@ h2 {
 }
 
 .container {
-  max-width: 1250px;
+  max-width: 2000px;
   margin: 0 auto;
   padding: 0 2vw;
 }
