--- a/miportfolio/css/styles.css
+++ b/miportfolio/css/styles.css
@@ -109,6 +109,7 @@ h2 {
 .about-text p {
   margin-right: 4vw;
   line-height: 1.6;
+  text-align: justify;
 }
 
 .about-image {
@@ -125,7 +126,7 @@ h2 {
 
 .btn {
   display: inline-block;
-  margin-top: 6vw;
+  margin-top: 3vw;
   margin-bottom: 6vw;
   padding: 1vw 1vw;
   background-color: #f01b3e;
@@ -280,7 +281,7 @@ footer {
   padding: 2vw 2vw;
   width: 100%;
   margin: 0;
-  margin-top: 15vw;
+  margin-top: 10vw;
 }
 
 .footer-content {
@@ -313,6 +314,7 @@ a, .btn {
   text-align: justify;
   color: #f01b3e;
   font-size: clamp(1rem, 1vw, 2rem); /* Usando clamp */
+  padding: 3vw 10vw;
 }
 
 .project-title {
